--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.12.72",
     "expo": "^41.0.0",
     "expo-splash-screen": "~0.10.2",
     "react": "16.13.1",
